Throughput files + new package name + Simulation.java